Worked on ctci java ch8 q7.